fix: Update Login Logic